fix overflow on responsive

--- a/homepage/footer.css
+++ b/homepage/footer.css
@@ -124,7 +124,7 @@ html {
 @media (min-width: 640px) {
   .footer__container {
     gap: 30px;
-    padding: 30px 1rem 30px;
+    padding: 30px 0 1rem 30px;
     grid-template-columns: 1.5fr 1fr 1fr 1fr;
   }
   .footer__title {
